Add js files fot components structure

--- a/react-ecc-project/src/css/index.css
+++ b/react-ecc-project/src/css/index.css
@@ -10,5 +10,5 @@ body {
 	
 	width: 300px;
 	height: 600px;
-	background-image: linear-gradient(#8309ca, #9141c0, #4f0879);
+	background-image: linear-gradient(#09ca13, #784b92, #bbd622);
 }
